Initialisation de la stack des tests unitaire et d'intégration